# Galaxy

./: .gitignore  .gitmodules  CMakeLists.txt  Galaxy.sln  Galaxy.vcxproj  Galaxy.vcxproj.filters  TODO.txt
Data/: one galaxy.glx  test.glx
Data/Examples/: Milkyway.glx  One galaxy.glx  Test.glx
Examples/: Milkyway.glx
Kernels/: Integrate.cl  Integration.cl
Lib/devil/include/IL/: ilu.h
Lib/stb_image/: stb_image.h
New/Galaxy/: Galaxy.sln
New/Galaxy/Debug/: Galaxy.ilk  milkyway.glx
New/Galaxy/Galaxy/: BarnesHutTree.cpp  BarnesHutTree.h  Galaxy.cpp  Galaxy.h  Galaxy.vcxproj  Galaxy.vcxproj.filters  GalaxyParticle.cpp  GalaxyParticle.h  GalaxySystem.cpp  GalaxySystem.h  ReadMe.txt  SphericalModel.cpp  SphericalModel.h  Universe.cpp  Universe.h  constants.cpp  constants.h  integration.cpp  integration.h  lpVec3.cpp  lpVec3.h  poisson.cpp  poisson.h  texture.h
New/Galaxy/Galaxy/Debug/: CL.read.1.tlog  CL.write.1.tlog  Galaxy.lastbuildstate  Galaxy_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Sources/: CMakeLists.txt  GalaxyApplication.cpp  GalaxyApplication.h  GalaxyConfiguration.h  GalaxyEngine.cpp  GalaxyEngine.h  GalaxyUI.cpp  GalaxyUI.h  Main.cpp  OrbitController.cpp  OrbitController.h
Sources/Controllers/: OrbitController.cpp
Sources/Core/: BarnesHutTree.cpp  BarnesHutTree.h  CMakeLists.txt  Constants.h  Galaxy.cpp  Galaxy.h  MathUtils.cpp  MathUtils.h  Solver.cpp  Solver.h  SphericalModel.cpp  Threading.cpp  Threading.h
Sources/GalaxySimulator/: CMakeLists.txt  GalaxySimulator.cpp  GalaxySimulator.h  GalaxyTypes.h
Sources/Launcher/: CMakeLists.txt  GalaxyEngine.cpp  GalaxyEngine.h  Main.cpp
Sources/Model/: CMakeLists.txt  Constants.h  Galaxy.cpp  Galaxy.h  Particle.cpp  Particle.h  SphericalModel.cpp  SphericalModel.h  Universe.cpp  Universe.h
Sources/Render/: CMakeLists.txt  GalaxyRenderer.cpp  GalaxyRenderer.h
Sources/Shaders/: BoundingBox.comp  BuildBarnesHut.comp  BuildTree - Copy.comp  BuildTree.comp  ClearForce.comp  DrawBarnesHut - Copy.geom  DrawBarnesHut.geom  DrawParticles.geom  IntegrateLeapFrogKick.comp  IntegrateLeapFrogKickDrift.comp  ParticlesLayout.h  ParticleseData.h  SimulationLayout.h  Solve.comp  Test.comp  TreeHelpers.h  Update.comp
Sources/Simulation/: CMakeLists.txt  GPUSolver.cpp  Solver.cpp  Solver.h
Sources/Simulation/BarnesHut/: BarnesHutCPUTree.cpp  BarnesHutCPUTree.h  BarnesHutGPUTree.cpp  BarnesHutGPUTree.h
Sources/Simulation/Solvers/: BarnesHutCPUSolver.cpp  BarnesHutCPUSolver.h  BarnesHutGPUSolver.cpp  BarnesHutGPUSolver.h  BruteforceCPUSolver.cpp  BruteforceCPUSolver.h  BruteforceGPUSolver.cpp  BruteforceGPUSolver.h  CPUSolverBase.cpp  CPUSolverBase.h  GPUSolverBase.cpp  GPUSolverBase.h  ISolver.h  SolverBase.cpp  SolverBase.h
Sources/UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
Sources/Utils/: CMakeLists.txt  MathUtils.cpp  MathUtils.h
Src/: Application.cpp  Application.h  BarnesHutTree.cpp  BarnesHutTree.h  GPUSolver.cpp  GPUSolver.h  Galaxy.cpp  Galaxy.h  GalaxyParticle.cpp  GalaxySystem.cpp  Image.cpp  Image.h  Math.cpp  Math.h  OpenCL.cpp  OpenCL.h  Orbit.h  SphericalModel.cpp  SphericalModel.h  Threading.cpp  Threading.h  UIOverlay.cpp  UIOverlay.h  Universe.h  Utils.h  constants.h  float3.cpp  float3.h  integration.cpp  logger.h  lpVec3.cpp  lpVec3.h  main.cpp  main2.cpp  poisson.cpp  poisson.h  solver.cpp  solver.h  texture.cpp  texture.h
Src/Old/: BarnesHutTree.h  GalaxyParticle.h  GalaxySystem.h  SphericalModel.cpp  Universe.cpp  constants.h  integration.h  main.cpp  main2.cpp  solver.cpp
